--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
-        android:text="Fetch Image Tutorial"
+        android:text="Fetch Image"
         android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
